src/qt/libqtextlayout.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QTextLayout__CursorMode
{
	SkipCharacters = 0,
	SkipWords = 1,
}
[AllowDuplicates]
public enum QTextLine__Edge
{
	Leading = 0,
	Trailing = 1,
}
[AllowDuplicates]
public enum QTextLine__CursorPosition
{
	CursorBetweenCharacters = 0,
	CursorOnCharacter = 1,
}
public interface IQTextInlineObject
{
	void* NativePtr { get; }
}
public struct QTextInlineObjectPtr : IQTextInlineObject, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(IQTextInlineObject other)
	{
		return .(CQt.QTextInlineObject_new((other == default || other.NativePtr == default) ? default : other.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QTextInlineObject_Delete(this.nativePtr);
	}
	
	public bool IsValid()
	{
		return CQt.QTextInlineObject_IsValid(this.nativePtr);
	}
	
	public void Rect()
	{
		CQt.QTextInlineObject_Rect(this.nativePtr);
	}
	
	public double Width()
	{
		return CQt.QTextInlineObject_Width(this.nativePtr);
	}
	
	public double Ascent()
	{
		return CQt.QTextInlineObject_Ascent(this.nativePtr);
	}
	
	public double Descent()
	{
		return CQt.QTextInlineObject_Descent(this.nativePtr);
	}
	
	public double Height()
	{
		return CQt.QTextInlineObject_Height(this.nativePtr);
	}
	
	public int64 TextDirection()
	{
		return CQt.QTextInlineObject_TextDirection(this.nativePtr);
	}
	
	public void SetWidth(double w)
	{
		CQt.QTextInlineObject_SetWidth(this.nativePtr, w);
	}
	
	public void SetAscent(double a)
	{
		CQt.QTextInlineObject_SetAscent(this.nativePtr, a);
	}
	
	public void SetDescent(double d)
	{
		CQt.QTextInlineObject_SetDescent(this.nativePtr, d);
	}
	
	public int32 TextPosition()
	{
		return CQt.QTextInlineObject_TextPosition(this.nativePtr);
	}
	
	public int32 FormatIndex()
	{
		return CQt.QTextInlineObject_FormatIndex(this.nativePtr);
	}
	
	public void Format()
	{
		CQt.QTextInlineObject_Format(this.nativePtr);
	}
	
}
public class QTextInlineObject
{
	public QTextInlineObjectPtr handle;
	
	public static implicit operator QTextInlineObjectPtr(Self self)
	{
		return self.handle;
	}
	
	public this(IQTextInlineObject other)
	{
		this.handle = QTextInlineObjectPtr.New(other);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public bool IsValid()
	{
		return this.handle.IsValid();
	}
	
	public void Rect()
	{
		this.handle.Rect();
	}
	
	public double Width()
	{
		return this.handle.Width();
	}
	
	public double Ascent()
	{
		return this.handle.Ascent();
	}
	
	public double Descent()
	{
		return this.handle.Descent();
	}
	
	public double Height()
	{
		return this.handle.Height();
	}
	
	public int64 TextDirection()
	{
		return this.handle.TextDirection();
	}
	
	public void SetWidth(double w)
	{
		this.handle.SetWidth(w);
	}
	
	public void SetAscent(double a)
	{
		this.handle.SetAscent(a);
	}
	
	public void SetDescent(double d)
	{
		this.handle.SetDescent(d);
	}
	
	public int32 TextPosition()
	{
		return this.handle.TextPosition();
	}
	
	public int32 FormatIndex()
	{
		return this.handle.FormatIndex();
	}
	
	public void Format()
	{
		this.handle.Format();
	}
	
}
extension CQt
{
	[LinkName("QTextInlineObject_new")]
	public static extern void* QTextInlineObject_new(void* other);
	[LinkName("QTextInlineObject_new2")]
	public static extern void* QTextInlineObject_new2(void* other);
	[LinkName("QTextInlineObject_new3")]
	public static extern void* QTextInlineObject_new3();
	[LinkName("QTextInlineObject_IsValid")]
	public static extern bool QTextInlineObject_IsValid(void* c_this);
	[LinkName("QTextInlineObject_Rect")]
	public static extern void QTextInlineObject_Rect(void* c_this);
	[LinkName("QTextInlineObject_Width")]
	public static extern double QTextInlineObject_Width(void* c_this);
	[LinkName("QTextInlineObject_Ascent")]
	public static extern double QTextInlineObject_Ascent(void* c_this);
	[LinkName("QTextInlineObject_Descent")]
	public static extern double QTextInlineObject_Descent(void* c_this);
	[LinkName("QTextInlineObject_Height")]
	public static extern double QTextInlineObject_Height(void* c_this);
	[LinkName("QTextInlineObject_TextDirection")]
	public static extern int64 QTextInlineObject_TextDirection(void* c_this);
	[LinkName("QTextInlineObject_SetWidth")]
	public static extern void QTextInlineObject_SetWidth(void* c_this, double w);
	[LinkName("QTextInlineObject_SetAscent")]
	public static extern void QTextInlineObject_SetAscent(void* c_this, double a);
	[LinkName("QTextInlineObject_SetDescent")]
	public static extern void QTextInlineObject_SetDescent(void* c_this, double d);
	[LinkName("QTextInlineObject_TextPosition")]
	public static extern int32 QTextInlineObject_TextPosition(void* c_this);
	[LinkName("QTextInlineObject_FormatIndex")]
	public static extern int32 QTextInlineObject_FormatIndex(void* c_this);
	[LinkName("QTextInlineObject_Format")]
	public static extern void QTextInlineObject_Format(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QTextInlineObject_Delete")]
	public static extern void QTextInlineObject_Delete(void* self);
}
public interface IQTextLayout
{
	void* NativePtr { get; }
}
public struct QTextLayoutPtr : IQTextLayout, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New()
	{
		return .(CQt.QTextLayout_new());
	}
	
	public void Dispose()
	{
		CQt.QTextLayout_Delete(this.nativePtr);
	}
	
	public void SetFont(IQFont f)
	{
		CQt.QTextLayout_SetFont(this.nativePtr, (f == default || f.NativePtr == default) ? default : f.NativePtr);
	}
	
	public void Font()
	{
		CQt.QTextLayout_Font(this.nativePtr);
	}
	
	public void SetRawFont(IQRawFont rawFont)
	{
		CQt.QTextLayout_SetRawFont(this.nativePtr, (rawFont == default || rawFont.NativePtr == default) ? default : rawFont.NativePtr);
	}
	
	public void SetText(String stringVal)
	{
		CQt.QTextLayout_SetText(this.nativePtr, libqt_string(stringVal));
	}
	
	public libqt_string Text()
	{
		return CQt.QTextLayout_Text(this.nativePtr);
	}
	
	public void SetTextOption(IQTextOption option)
	{
		CQt.QTextLayout_SetTextOption(this.nativePtr, (option == default || option.NativePtr == default) ? default : option.NativePtr);
	}
	
	public void* TextOption()
	{
		return CQt.QTextLayout_TextOption(this.nativePtr);
	}
	
	public void SetPreeditArea(int32 position, String text)
	{
		CQt.QTextLayout_SetPreeditArea(this.nativePtr, position, libqt_string(text));
	}
	
	public int32 PreeditAreaPosition()
	{
		return CQt.QTextLayout_PreeditAreaPosition(this.nativePtr);
	}
	
	public libqt_string PreeditAreaText()
	{
		return CQt.QTextLayout_PreeditAreaText(this.nativePtr);
	}
	
	public void SetFormats(QTextLayout__FormatRangePtr[] overrides)
	{
		CQt.QTextLayout_SetFormats(this.nativePtr, null);
	}
	
	public void[] Formats()
	{
		return CQt.QTextLayout_Formats(this.nativePtr);
	}
	
	public void ClearFormats()
	{
		CQt.QTextLayout_ClearFormats(this.nativePtr);
	}
	
	public void SetCacheEnabled(bool enable)
	{
		CQt.QTextLayout_SetCacheEnabled(this.nativePtr, enable);
	}
	
	public bool CacheEnabled()
	{
		return CQt.QTextLayout_CacheEnabled(this.nativePtr);
	}
	
	public void SetCursorMoveStyle(int64 style)
	{
		CQt.QTextLayout_SetCursorMoveStyle(this.nativePtr, (int64)style);
	}
	
	public int64 CursorMoveStyle()
	{
		return CQt.QTextLayout_CursorMoveStyle(this.nativePtr);
	}
	
	public void BeginLayout()
	{
		CQt.QTextLayout_BeginLayout(this.nativePtr);
	}
	
	public void EndLayout()
	{
		CQt.QTextLayout_EndLayout(this.nativePtr);
	}
	
	public void ClearLayout()
	{
		CQt.QTextLayout_ClearLayout(this.nativePtr);
	}
	
	public void CreateLine()
	{
		CQt.QTextLayout_CreateLine(this.nativePtr);
	}
	
	public int32 LineCount()
	{
		return CQt.QTextLayout_LineCount(this.nativePtr);
	}
	
	public void LineAt(int32 i)
	{
		CQt.QTextLayout_LineAt(this.nativePtr, i);
	}
	
	public void LineForTextPosition(int32 pos)
	{
		CQt.QTextLayout_LineForTextPosition(this.nativePtr, pos);
	}
	
	public bool IsValidCursorPosition(int32 pos)
	{
		return CQt.QTextLayout_IsValidCursorPosition(this.nativePtr, pos);
	}
	
	public int32 NextCursorPosition(int32 oldPos)
	{
		return CQt.QTextLayout_NextCursorPosition(this.nativePtr, oldPos);
	}
	
	public int32 PreviousCursorPosition(int32 oldPos)
	{
		return CQt.QTextLayout_PreviousCursorPosition(this.nativePtr, oldPos);
	}
	
	public int32 LeftCursorPosition(int32 oldPos)
	{
		return CQt.QTextLayout_LeftCursorPosition(this.nativePtr, oldPos);
	}
	
	public int32 RightCursorPosition(int32 oldPos)
	{
		return CQt.QTextLayout_RightCursorPosition(this.nativePtr, oldPos);
	}
	
	public void Draw(IQPainter p, IQPointF pos)
	{
		CQt.QTextLayout_Draw(this.nativePtr, (p == default || p.NativePtr == default) ? default : p.NativePtr, (pos == default || pos.NativePtr == default) ? default : pos.NativePtr);
	}
	
	public void DrawCursor(IQPainter p, IQPointF pos, int32 cursorPosition)
	{
		CQt.QTextLayout_DrawCursor(this.nativePtr, (p == default || p.NativePtr == default) ? default : p.NativePtr, (pos == default || pos.NativePtr == default) ? default : pos.NativePtr, cursorPosition);
	}
	
	public void DrawCursor2(IQPainter p, IQPointF pos, int32 cursorPosition, int32 width)
	{
		CQt.QTextLayout_DrawCursor2(this.nativePtr, (p == default || p.NativePtr == default) ? default : p.NativePtr, (pos == default || pos.NativePtr == default) ? default : pos.NativePtr, cursorPosition, width);
	}
	
	public void Position()
	{
		CQt.QTextLayout_Position(this.nativePtr);
	}
	
	public void SetPosition(IQPointF p)
	{
		CQt.QTextLayout_SetPosition(this.nativePtr, (p == default || p.NativePtr == default) ? default : p.NativePtr);
	}
	
	public void BoundingRect()
	{
		CQt.QTextLayout_BoundingRect(this.nativePtr);
	}
	
	public double MinimumWidth()
	{
		return CQt.QTextLayout_MinimumWidth(this.nativePtr);
	}
	
	public double MaximumWidth()
	{
		return CQt.QTextLayout_MaximumWidth(this.nativePtr);
	}
	
	public void[] GlyphRuns()
	{
		return CQt.QTextLayout_GlyphRuns(this.nativePtr);
	}
	
	public void SetFlags(int32 flags)
	{
		CQt.QTextLayout_SetFlags(this.nativePtr, flags);
	}
	
	public int32 NextCursorPosition2(int32 oldPos, int64 mode)
	{
		return CQt.QTextLayout_NextCursorPosition2(this.nativePtr, oldPos, (int64)mode);
	}
	
	public int32 PreviousCursorPosition2(int32 oldPos, int64 mode)
	{
		return CQt.QTextLayout_PreviousCursorPosition2(this.nativePtr, oldPos, (int64)mode);
	}
	
	public void Draw3(IQPainter p, IQPointF pos, QTextLayout__FormatRangePtr[] selections)
	{
		CQt.QTextLayout_Draw3(this.nativePtr, (p == default || p.NativePtr == default) ? default : p.NativePtr, (pos == default || pos.NativePtr == default) ? default : pos.NativePtr, null);
	}
	
	public void Draw4(IQPainter p, IQPointF pos, QTextLayout__FormatRangePtr[] selections, IQRectF clip)
	{
		CQt.QTextLayout_Draw4(this.nativePtr, (p == default || p.NativePtr == default) ? default : p.NativePtr, (pos == default || pos.NativePtr == default) ? default : pos.NativePtr, null, (clip == default || clip.NativePtr == default) ? default : clip.NativePtr);
	}
	
	public void[] GlyphRuns1(int32 from)
	{
		return CQt.QTextLayout_GlyphRuns1(this.nativePtr, from);
	}
	
	public void[] GlyphRuns2(int32 from, int32 length)
	{
		return CQt.QTextLayout_GlyphRuns2(this.nativePtr, from, length);
	}
	
}
public class QTextLayout
{
	public QTextLayoutPtr handle;
	
	public static implicit operator QTextLayoutPtr(Self self)
	{
		return self.handle;
	}
	
	public this()
	{
		this.handle = QTextLayoutPtr.New();
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public void SetFont(IQFont f)
	{
		this.handle.SetFont(f);
	}
	
	public void Font()
	{
		this.handle.Font();
	}
	
	public void SetRawFont(IQRawFont rawFont)
	{
		this.handle.SetRawFont(rawFont);
	}
	
	public void SetText(String stringVal)
	{
		this.handle.SetText(stringVal);
	}
	
	public libqt_string Text()
	{
		return this.handle.Text();
	}
